# ev_assistant

./: .gitignore  advance_rag.py  charge_station_locator.py  docker-compose.yaml  ev_trip_planner.py  evaluate_rag.py  graphrag.py  index.html  main.py  prompt.py  pyproject.toml  requirements.txt  testing.py  websocket_.py
agents/: openai_agent.py
agents/agent_tools/: charge_station_locator.py  ev_trip_planner.py  schema.py
agents/agent_tools/utils/: charge_station_availability.py  google_location.py
core/: settings.py
data/: server_id
data/databases/neo4j/: neostore  neostore.counts.db  neostore.indexstats.db  neostore.labeltokenstore.db  neostore.labeltokenstore.db.id  neostore.labeltokenstore.db.names  neostore.labeltokenstore.db.names.id  neostore.nodestore.db  neostore.nodestore.db.id  neostore.nodestore.db.labels  neostore.nodestore.db.labels.id  neostore.propertystore.db  neostore.propertystore.db.arrays.id  neostore.propertystore.db.id  neostore.propertystore.db.index  neostore.propertystore.db.index.id  neostore.propertystore.db.index.keys  neostore.propertystore.db.index.keys.id  neostore.propertystore.db.strings  neostore.propertystore.db.strings.id  neostore.relationshipgroupstore.db  neostore.relationshipgroupstore.db.id  (+9 more)
frontend/ev-companion/: README.md  package.json  pnpm-lock.yaml
github_repo_query/: main.py
postgres_vector_db/: main.py  pgvector_store.py
query_engines/: ocpp_query_engine.py
utils/: charge_station_availability.py  distance_calc.py  google_location.py
vector_storage/: docstore.json  index_store.json
(+27 files in other folders)
